compiler/src/test/resources/golden/errors/type_interp_non_printable.err
error: cannot interpolate a value of type Tag
  --> type_interp_non_printable.dawn:3:33
  |
3 | fn f(t: Tag) -> String = "tag: {t}"
  |                                 ^
  = hint: interpolation supports Int, Float, Bool, String (derive Show is not implemented yet)
